--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
     
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "ConverterService\\": "src/"
