--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-    
+        "php": ">=7.2.5",
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev-master",
     "autoload": {
         "psr-4": {
             "ConverterService\\": "src/"
