--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "alexsmartalexandrov/converter",
     "type": "library",
     "description": "convert data html to csv or csv to html, prepare data for convert and other",
+    "license": "MIT",
     "authors": [
         {
             "name": "Александров Александр",
