--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.2.5",
-        "ext-pdftohtml": "*",
+        "ext-pdftohtml": "*"
     },
     "autoload": {
         "psr-4": {
